@@ -10,9 +10,13 @@ all:
 Makefile.am: Makefile.am.in
 	rm -f $@ $@t
 	sed -n '1,/^##m4-files-begin/p' Makefile.am.in > $@t
-	echo EXTRA_DIST = README MacOSX Makefile.am.in buildvms.com config.* \
-	  djconfig.sh make_vms.com makefile.* | fmt | \
-	  (tr '\012' @; echo) |sed 's/@$$/%/;s/@/ \\@/g' |tr @% '\012 ' >> $@t
+	echo EXTRA_DIST = README MacOSX Makefile.am.in buildvms.com	\
+	  config.* djconfig.sh make_vms.com makefile.* watcom/Makefile	\
+	  watcom/config.h cygwin/Makefile mingw/Makefile \
+	  | fmt \
+          | (tr '\012' @; echo) \
+	  | sed 's/@$$/%/;s/@/ \\@/g' \
+          | tr @% '\012 ' >> $@t
 	sed -n '/^##m4-files-end/,$$p' $< >> $@t
 	chmod a-w $@t
 	mv $@t $@
